--- a/resources/assets/sass/modules/_variables.scss
+++ b/resources/assets/sass/modules/_variables.scss
@@ -11,11 +11,11 @@ $border-radius-large:       4px !default;
 $border-radius-small:       1px !default;
 
 //** Tooltip background color
-$tooltip-bg:                #333 !default;
+$tooltip-bg:                #464646 !default;
 $tooltip-opacity:           .9 !default;
 $base-background-color:     #f1f1f1;
 
-$base-font-family:          "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+$base-font-family:          "Ebrima", "Arial", "Helvetica", sans-serif;
 $base-font-weight:          400;
 $base-letter-spacing:       0.08em;
 $base-font-size:            15px;
@@ -32,8 +32,13 @@ $sidebar-background-color:  #F0F3F4;
 $sidebar-border-color:      1px solid rgba(255, 255, 255, .1);
 $sidebar-border-shadow:     inset 0px -2px 3px rgba(0,0,0,0.25);
 $sidebar-text-size:         0.9em;
-$sidebar-text-color:        #333;
-$sidebar-text-active-color: #333;
+$sidebar-text-color:        #464646;
+$sidebar-text-active-color: #464646;
 $sidebar-normal-width:      230px;
 $sidebar-phone-width:       75%;
 $sidebar-active-color:      #00695C;
+
+
+$figshare-pink-color:       #c74d5a;
+$figshare-asphalt-color:    #556471;
+$figshare-border-color:     #ddd;
