--- a/resources/assets/sass/modules/_variables.scss
+++ b/resources/assets/sass/modules/_variables.scss
@@ -10,12 +10,12 @@ $border-radius-base:        3px !default;
 $border-radius-large:       4px !default;
 $border-radius-small:       2px !default;
 
-//** Tooltip background color
-$tooltip-bg:                #333 !default;
+// Tooltip background color
+$tooltip-bg:                #464646 !default;
 $tooltip-opacity:           .9 !default;
 $base-background-color:     #f1f1f1;
 
-$base-font-family:          -apple-system, BlinkMacSystemFont, "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+$base-font-family:          "Ebrima", "Arial", "Helvetica", sans-serif;
 $base-font-weight:          400;
 $base-letter-spacing:       0.08em;
 $base-font-size:            15px;
@@ -32,8 +32,13 @@ $sidebar-background-color:  #78909c;
 $sidebar-border-color:      1px solid #6c818c;
 $sidebar-border-shadow:     inset 0px -2px 3px rgba(0,0,0,0.25);
 $sidebar-text-size:         0.9em;
-$sidebar-text-color:        #ffffff;
-$sidebar-text-active-color: #ffffff;
+$sidebar-text-color:        #464646;
+$sidebar-text-active-color: #464646;
 $sidebar-normal-width:      230px;
 $sidebar-phone-width:       75%;
 $sidebar-active-color:      #00695C;
+
+
+$figshare-pink-color:       #c74d5a;
+$figshare-asphalt-color:    #556471;
+$figshare-border-color:     #ddd;
