--- a/resources/assets/sass/status-page/_status-page.scss
+++ b/resources/assets/sass/status-page/_status-page.scss
@@ -1,7 +1,5 @@
 body.status-page {
-    padding-top: 40px;
     font-family: $base-font-family;
-    background-color: #F0F3F4;
     color: #333333;
     font-size: 1.4em;
     font-weight: $base-font-weight;
@@ -43,24 +41,69 @@ body.status-page {
         }
     }
 
+
+    .main-header {
+        background-color: #fbfbfb;
+        padding: 14px 0;
+        border-bottom: 3px solid #f5f5f5;
+        .container {
+            text-align: justify;
+            line-height: 0;
+            a {
+                display: inline-block;
+            }
+
+            .back-to {
+                color: $figshare-pink-color;
+                font-weight: bold;
+            }
+            &:after {
+                content: "";
+                display: inline-block;
+                height: 0;
+                width: 100%;
+            }
+        }
+    }
+
+    .main-content-wrap {
+        margin-top: 42px;
+    }
+
     .help-icon {
         cursor: help;
     }
 
     .text-success, .text-component-1 {
-        color: $cachet_green;
+        background-color: $cachet_green;
+        color: #fff!important;
+        padding: 3px 7px;
+        border-radius: 3px;
+        font-weight: bold;
     }
 
     .text-info, .text-component-2 {
-        color: $cachet_blue;
+        background-color: $cachet_blue;
+        color: #fff!important;
+        padding: 3px 7px;
+        border-radius: 3px;
+        font-weight: bold;
     }
 
     .text-alert, .text-component-3 {
-        color: $cachet_yellow;
+        background-color: $cachet_yellow;
+        color: #fff!important;
+        padding: 3px 7px;
+        border-radius: 3px;
+        font-weight: bold;
     }
 
     .text-danger, .text-component-4 {
-        color: $cachet_red;
+        background-color: $cachet_red;
+        color: #fff!important;
+        padding: 3px 7px;
+        border-radius: 3px;
+        font-weight: bold;
     }
 
     .container {
@@ -89,8 +132,8 @@ body.status-page {
 
     .timeline {
         .content-wrapper {
-            margin-top: 40px;
-            margin-bottom: 40px;
+            margin-top: 14px;
+            margin-bottom: 14px;
         }
         h3 {
             margin-top: 30px;
@@ -151,14 +194,14 @@ body.status-page {
                 top: -5px;
                 width: 2px;
                 height: 100%;
-                background: #7266BA;
+                background: $figshare-border-color;
             }
             .status-icon {
                 background: #fff;
                 width: 35px;
                 height: 35px;
                 border-radius: 50%;
-                border: 1px solid #e8e8e8;
+                border: 1px solid $figshare-border-color;
                 position: absolute;
                 left: 25px;
                 top: 14px;
@@ -192,7 +235,7 @@ body.status-page {
             }
             .panel {
                 margin: 0;
-                border-radius: 2px;
+                border-radius: 3px;
 
                 &.panel-message {
                     border: 1px solid #e8e8e8;
@@ -232,7 +275,7 @@ body.status-page {
                 }
 
                 .panel-body {
-                    border-top: 1px solid #eee;
+                    border-top: 1px solid $figshare-border-color;
                     p {
                         &:not(:last-child) {
                             margin-bottom: 10px;
@@ -331,6 +374,11 @@ body.status-page {
         }
     }
 
+    .panel {
+        box-shadow: none;
+        border-radius: 3px;
+    }
+
     footer {
         position: absolute;
         width: 100%;
@@ -416,6 +464,46 @@ body.status-page {
             &:hover {
                 background-color: transparent;
             }
+        }
+    }
+
+    .pager {
+        margin-top: 42px;
+        li > a {
+            border-radius: 3px;
+            &:hover {
+                background-color: $figshare-pink-color;
+                border-color: $figshare-pink-color;
+                color: #fff!important;
+            }
+        }
+    }
+
+    a:hover {
+        text-decoration: none
+    }
+    a {
+        abbr[data-original-title], abbr[title] {
+            cursor: pointer;
+            border-bottom: 1px solid #f3dbde;
+        }
+    }
+    .date {
+        abbr[data-original-title], abbr[title] {
+            cursor: pointer;
+            border-bottom: 0;
+        }
+    }
+
+    .btn.btn-success {
+        border: 1px solid $figshare-border-color;
+        background-color: #fff!important;
+        border-radius: 3px;
+
+        &:hover {
+            background-color: $figshare-pink-color!important;
+            color: #fff!important;
+            border: 1px solid $figshare-pink-color;
         }
     }
 }
