--- a/resources/assets/sass/modules/_alerts.scss
+++ b/resources/assets/sass/modules/_alerts.scss
@@ -1,38 +1,23 @@
 .alert {
-    border-radius: 4px;
-    background: $cachet_yellow;
-    border: solid 2px $cachet_dark-yellow;
+    border-radius: 3px;
+    // background: $cachet_yellow;
+    border: solid 1px $cachet_dark-yellow;
 
     &.alert-success {
-        background-color: $cachet_green;
-        border: solid 2px $cachet_dark-green;
-        color: white;
-
-        a {
-            color: white;
-            font-weight: bold;
-        }
+        // background-color: $cachet_green;
+        border: solid 1px $cachet_dark-green;
+        // color: white;
     }
 
     &.alert-info {
-        background: $cachet_blue;
-        border: solid 2px $cachet_dark-blue;
-        color: white;
-
-        a {
-            color: white;
-            font-weight: bold;
-        }
+        // background: $cachet_blue;
+        border: solid 1px $cachet_dark-blue;
+        // color: #FFF;
     }
 
     &.alert-danger {
-        background: $cachet_red;
-        border: solid 2px $cachet_dark-red;
-        color: white;
-
-        a {
-            color: white;
-            font-weight: bold;
-        }
+        // background: $cachet_red;
+        border: solid 1px $cachet_dark-red;
+        // color: #FFF;
     }
 }
