--- a/resources/assets/sass/status-page/_status-page.scss
+++ b/resources/assets/sass/status-page/_status-page.scss
@@ -43,19 +43,28 @@ body.status-page {
 
 
     .main-header {
-        background-color: #fbfbfb;
         padding: 14px 0;
-        border-bottom: 3px solid #f5f5f5;
+        border-bottom: 3px solid #ddd;
+        background: #f9f9f9;
+        background: -moz-linear-gradient(top,  #f9f9f9 0%, #f1f1f1 100%);
+        background: -webkit-linear-gradient(top,  #f9f9f9 0%,#f1f1f1 100%);
+        background: linear-gradient(to bottom,  #f9f9f9 0%,#f1f1f1 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9f9f9', endColorstr='#f1f1f1',GradientType=0 );
+
         .container {
             text-align: justify;
             line-height: 0;
             a {
                 display: inline-block;
+                vertical-align: middle;
             }
 
             .back-to {
-                color: $figshare-pink-color;
-                font-weight: bold;
+                background-color: $figshare-pink-color;
+                color: #fff;
+                line-height: 24px;
+                padding: 0 7px;
+                border-radius: 3px;
             }
             &:after {
                 content: "";
@@ -66,8 +75,17 @@ body.status-page {
         }
     }
 
+    .figshare-intro {
+        text-align: center;
+        color: #999;
+
+        h1 {
+            color: #252525;
+        }
+    }
+
     .main-content-wrap {
-        margin-top: 42px;
+        margin-top: 22px;
     }
 
     .help-icon {
@@ -75,32 +93,28 @@ body.status-page {
     }
 
     .text-success, .text-component-1 {
-        background-color: $cachet_green;
-        color: #fff!important;
+        color: $cachet_green;
         padding: 3px 7px;
         border-radius: 3px;
         font-weight: bold;
     }
 
     .text-info, .text-component-2 {
-        background-color: $cachet_blue;
-        color: #fff!important;
+        color: $cachet_blue;
         padding: 3px 7px;
         border-radius: 3px;
         font-weight: bold;
     }
 
     .text-alert, .text-component-3 {
-        background-color: $cachet_yellow;
-        color: #fff!important;
+        color: $cachet_yellow;
         padding: 3px 7px;
         border-radius: 3px;
         font-weight: bold;
     }
 
     .text-danger, .text-component-4 {
-        background-color: $cachet_red;
-        color: #fff!important;
+        color: $cachet_red;
         padding: 3px 7px;
         border-radius: 3px;
         font-weight: bold;
@@ -126,8 +140,42 @@ body.status-page {
     }
 
     .alert {
-        font-size: 1.2em;
-        font-weight: 600;
+        font-size: 1.8rem;
+        font-weight: bold;
+        border: 0!important;
+        text-align: center;
+        position: relative;
+        padding-top: 90px;
+
+        &:before {
+            width: 70px;
+            height: 31px;
+            padding: 20px 0;
+            vertical-align: middle;
+            border-radius: 50%;
+            box-sizing: content-box;
+            display: inline-block;
+            font-family: Ionicons;
+            color: #fff;
+            font-size: 31px;
+            line-height: 31px;
+            text-align: center;
+            position: absolute;
+            top: 0;
+            left: 50%;
+            margin-left: -35px;
+        }
+
+        &.alert-info:before {
+            text-indent: 7px;
+            content: "";
+            background-color: #f7ca18;
+        }
+
+        &.alert-success:before {
+            content: "";
+            background-color: #86bd00;
+        }
     }
 
     .timeline {
@@ -505,5 +553,9 @@ body.status-page {
             color: #fff!important;
             border: 1px solid $figshare-pink-color;
         }
+    }
+
+    .section-status {
+        margin-top: 21px;
     }
 }
