--- a/resources/assets/sass/modules/_variables.scss
+++ b/resources/assets/sass/modules/_variables.scss
@@ -11,7 +11,7 @@ $border-radius-large:       4px !default;
 $border-radius-small:       2px !default;
 
 // Tooltip background color
-$tooltip-bg:                #464646 !default;
+$tooltip-bg:                #333 !default;
 $tooltip-opacity:           .9 !default;
 $base-background-color:     #f1f1f1;
 
@@ -32,8 +32,8 @@ $sidebar-background-color:  #78909c;
 $sidebar-border-color:      1px solid #6c818c;
 $sidebar-border-shadow:     inset 0px -2px 3px rgba(0,0,0,0.25);
 $sidebar-text-size:         0.9em;
-$sidebar-text-color:        #464646;
-$sidebar-text-active-color: #464646;
+$sidebar-text-color:        #fff;
+$sidebar-text-active-color: #ffffff;
 $sidebar-normal-width:      230px;
 $sidebar-phone-width:       75%;
 $sidebar-active-color:      #00695C;
